cmake_minimum_required(VERSION 3.16)

add_executable(ping_server ping_server.cpp)
target_include_directories(ping_server PRIVATE ${CMAKE_SOURCE_DIR}/include)
target_compile_features(ping_server PUBLIC cxx_std_17)
if(WIN32)
    target_link_libraries(ping_server PRIVATE ws2_32)
endif()

add_executable(basic_client basic_client.cpp)
target_include_directories(basic_client PRIVATE ${CMAKE_SOURCE_DIR}/include)
target_compile_features(basic_client PUBLIC cxx_std_17)
if(WIN32)
    target_link_libraries(basic_client PRIVATE ws2_32)
endif()

add_executable(test_server test_server.cpp)
target_include_directories(test_server PRIVATE ${CMAKE_SOURCE_DIR}/include)
target_compile_features(test_server PUBLIC cxx_std_17)
if(WIN32)
    target_link_libraries(test_server PRIVATE ws2_32)
endif()

add_executable(dump_startgame dump_startgame.cpp)
target_include_directories(dump_startgame PRIVATE ${CMAKE_SOURCE_DIR}/include)
target_compile_features(dump_startgame PUBLIC cxx_std_17)
if(WIN32)
    target_link_libraries(dump_startgame PRIVATE ws2_32)
endif()
